--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.1.0
   supabase_flutter: ^2.3.4
   app_links: ^3.4.3
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
