--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   supabase_flutter: ^2.3.4
   app_links: ^3.4.3
   curved_navigation_bar: ^1.0.3
+  camera: ^0.10.5+2
+  permission_handler: ^11.3.0
+  path_provider: ^2.1.2
+  path: ^1.8.3
+  flutter_sound: ^9.2.13+1
+  audioplayers: ^5.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
