--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   audioplayers: ^5.2.0
   flutter_dotenv: ^5.1.0
   http: ^1.1.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
